crates/rome_diagnostics/tests/macros/category_paren.stderr
error: unexpected token
 --> tests/macros/category_paren.rs:4:22
  |
4 | #[diagnostic(message(description = Ident))]
  |                      ^^^^^^^^^^^
